--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.open-sans-400 {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Open Sans",Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
